--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hardhat",
+  "name": "Test_Market",
   "scripts": {
     "compile": "npx hardhat compile",
     "test": "npx hardhat test",
